Added html paths, different html/scss/js changes.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,29 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benhome: about</title>
-
-  <!-- <link rel="stylesheet" href="/libs/reset/reset.css"> -->
-  <!-- <link rel="stylesheet" href="../../fonts/stylesheet.css"> -->
-
-  <!-- <script src="../../common-blocks/btn-to-top/btn-to-top.js" defer></script>
-    <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
-    <script src="../../common-blocks//services/services.js" defer></script> -->
+  <title>Benhome: About</title>
 
   <link rel="stylesheet" href="./about.scss">
-
   <script src="./about.js" defer></script>
 </head>
 
 <body>
   <div class="btn-to-top">
-
   </div>
   <header class="header">
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="#">
+      <a class="header__logo" href="/">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -35,28 +26,28 @@
         </button>
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              HOME
+            <a class="header__menu-item-link" href="../index/index.html">
+              Home
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              ABOUT
+            <a class="header__menu-item-link" href="../about/about.html">
+              About
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              PORTFOLIO
+            <a class="header__menu-item-link" href="../portfolio/portfolio.html">
+              Portfolio
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              NEWS
+            <a class="header__menu-item-link" href="../news/news.html">
+              News
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              CONTACT
+            <a class="header__menu-item-link" href="../contact/contact.html">
+              Contact
             </a>
           </li>
         </ul>
@@ -81,9 +72,10 @@
       <div class="header__central-decor-el">
       </div>
     </div>
+    <!-- // ? -->
     <div class="header__lower">
-
     </div>
+    <!-- // ? -->
   </header>
   <section class="idea">
     <div class="idea__upper">
@@ -136,12 +128,9 @@
           Rackham
         </p>
       </div>
-
     </div>
-
   </section>
   <section class="services">
-    <!-- <script src="/blocks/services/services.js" defer></script> -->
     <div class="services__left">
       <h3 class="services__title">
         SERVICES
@@ -262,11 +251,9 @@
         Meet our team
       </h2>
     </div>
-
     <div class="team__lower">
-      <div class="team__lower-wrapper--first">
-
-        <div class="team__person team__person--first">
+      <div class="team__lower-wrapper--1">
+        <div class="team__person team__person--1">
           <div class="team__person-info">
             <h3 class="team__person-title">
               Adam Raymond
@@ -277,15 +264,17 @@
             </p>
             <ul class="socials">
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--first">
+                <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--second">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--third">
+                <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
             </ul>
@@ -294,7 +283,7 @@
             <img class="team__person-photo-img" src="../../images/pages/about/person1.png" alt="person1">
           </div>
         </div>
-        <div class="team__person team__person--second">
+        <div class="team__person team__person--2">
           <div class="team__person-info">
             <h3 class="team__person-title">
               Adam Raymond
@@ -305,15 +294,17 @@
             </p>
             <ul class="socials">
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--first">
+                <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--second">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--third">
+                <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
             </ul>
@@ -323,10 +314,8 @@
           </div>
         </div>
       </div>
-
-      <div class="team__lower-wrapper--second">
-
-        <div class="team__person team__person--third">
+      <div class="team__lower-wrapper--2">
+        <div class="team__person team__person--3">
           <div class="team__person-info">
             <h3 class="team__person-title">
               Adam Raymond
@@ -337,15 +326,17 @@
             </p>
             <ul class="socials">
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--first">
+                <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--second">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--third">
+                <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
             </ul>
@@ -354,7 +345,7 @@
             <img class="team__person-photo-img" src="../../images/pages/about/person3.png" alt="person3">
           </div>
         </div>
-        <div class="team__person team__person--fourth">
+        <div class="team__person team__person--4">
           <div class="team__person-info">
             <h3 class="team__person-title">
               Adam Raymond
@@ -365,15 +356,17 @@
             </p>
             <ul class="socials">
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--first">
+                <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--second">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
                 </a>
               </li>
               <li class="socials__item">
-                <a href="#" target="_blank" rel="noopener" class="socials__link socials__link--third">
+                <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
+                  rel="noopener">
                 </a>
               </li>
             </ul>
@@ -388,84 +381,88 @@
 
   <section class="brands">
     <div class="brands__container container">
-      <div class="brands__item brands__item--first">
-      </div>
-      <div class="brands__item brands__item--second">
-      </div>
-      <div class="brands__item brands__item--third">
-      </div>
-      <div class="brands__item brands__item--fourth">
-      </div>
+      <ul class="brands__list">
+        <li class="brands__list-item">
+          <div class="brands__item brands__item--1">
+          </div>
+        </li>
+        <li class="brands__list-item">
+          <div class="brands__item brands__item--2">
+          </div>
+        </li>
+        <li class="brands__list-item">
+          <div class="brands__item brands__item--3">
+          </div>
+        </li>
+        <li class="brands__list-item">
+          <div class="brands__item brands__item--4">
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
-
   <footer class="footer">
-    <a href="#" class="footer__logo">
+    <a class="footer__logo" href="/">
       <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
-
     <p class="footer__rights">
       © Sentro 2021 <br>
       All Rights Resevered
     </p>
-
     <ul class="footer__menu footer__menu--secondary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Site Map
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Terms & Conditions
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Privacy Policy
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Help
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Affiliated
         </a>
       </li>
     </ul>
-
     <ul class="footer__menu footer__menu--primary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../index/index.html">
           Home
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../about/about.html">
           About
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../portfolio/portfolio.html">
           Portfolio
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../news/news.html">
           News
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../contact/contact.html">
           Contact
         </a>
       </li>
     </ul>
-
-
     <ul class="footer__languages">
       <li class="footer__languages-item">
         ENG
@@ -477,25 +474,21 @@
         GER
       </li>
     </ul>
-
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--first" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--second" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--third" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
         </a>
       </li>
     </ul>
-
   </footer>
-
-
 </body>
 
 </html>
