--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benhome: contact</title>
-
+  <title>Benhome: Contact</title>
   <link rel="stylesheet" href="./contact.scss">
   <script src="./contact.js" defer></script>
 </head>
@@ -18,7 +17,7 @@
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="#">
+      <a class="header__logo" href="/">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -26,28 +25,28 @@
         </button>
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              HOME
+            <a class="header__menu-item-link" href="../index/index.html">
+              Home
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              ABOUT
+            <a class="header__menu-item-link" href="../about/about.html">
+              About
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              PORTFOLIO
+            <a class="header__menu-item-link" href="../portfolio/portfolio.html">
+              Portfolio
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              NEWS
+            <a class="header__menu-item-link" href="../news/news.html">
+              News
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              CONTACT
+            <a class="header__menu-item-link" href="../contact/contact.html">
+              Contact
             </a>
           </li>
         </ul>
@@ -105,7 +104,7 @@
             Follow us:
           </div>
           <div class="contacts__socials-items-container">
-            <a class="contacts__socials-link contacts__socials-link--first" href="#" target="_blank" rel="noopener">
+            <a class="contacts__socials-link contacts__socials-link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
               <svg class="contacts__socials-img" width="9" height="18" viewBox="0 0 9 18" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path class="contacts__socials-path"
@@ -113,7 +112,7 @@
                   fill="#000" />
               </svg>
             </a>
-            <a class="contacts__socials-link contacts__socials-link--second" href="#" target="_blank" rel="noopener">
+            <a class="contacts__socials-link contacts__socials-link--2" href="https://twitter.com/" target="_blank" rel="noopener">
               <svg class="contacts__socials-img" width="23" height="18" viewBox="0 0 23 18" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path class="contacts__socials-path"
@@ -121,7 +120,7 @@
                   fill="#000" />
               </svg>
             </a>
-            <a class="contacts__socials-link contacts__socials-link--third" href="#" target="_blank" rel="noopener">
+            <a class="contacts__socials-link contacts__socials-link--3" href="https://www.pinterest.ru/" target="_blank" rel="noopener">
               <svg class="contacts__socials-img" width="21" height="22" viewBox="0 0 21 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path class="contacts__socials-path"
@@ -151,7 +150,7 @@
     </div>
   </section>
   <footer class="footer">
-    <a href="#" class="footer__logo">
+    <a class="footer__logo" href="/">
       <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
     <p class="footer__rights">
@@ -160,54 +159,54 @@
     </p>
     <ul class="footer__menu footer__menu--secondary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Site Map
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Terms & Conditions
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Privacy Policy
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Help
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Affiliated
         </a>
       </li>
     </ul>
     <ul class="footer__menu footer__menu--primary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="/">
           Home
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../about/about.html">
           About
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../portfolio/portfolio.html">
           Portfolio
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../news/news.html">
           News
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../contact/contact.html">
           Contact
         </a>
       </li>
@@ -225,15 +224,15 @@
     </ul>
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--first" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--second" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--third" href="#" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
         </a>
       </li>
     </ul>
