--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -6,15 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Benhome: projects</title>
-
-  <!-- <link rel="stylesheet" href="../../libs/reset/reset.css">
-  <link rel="stylesheet" href="../../fonts/stylesheet.css"> -->
-
-  <!-- <script src="../../common-blocks/header-upper/header-upper.js" defer></script> -->
-
   <link rel="stylesheet" href="./portfolio.scss">
   <script src="./portfolio.js" defer></script>
-
 </head>
 
 <body>
@@ -22,7 +15,7 @@
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="#">
+      <a class="header__logo" href="/">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -30,46 +23,48 @@
         </button>
         <ul class="header__menu">
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              HOME
+            <a class="header__menu-item-link" href="../index/index.html">
+              Home
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              ABOUT
+            <a class="header__menu-item-link" href="../about/about.html">
+              About
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              PORTFOLIO
+            <a class="header__menu-item-link" href="../portfolio/portfolio.html">
+              Portfolio
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              NEWS
+            <a class="header__menu-item-link" href="../news/news.html">
+              News
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
-              CONTACT
+            <a class="header__menu-item-link" href="../portfolio/portfolio.html">
+              Contact
             </a>
           </li>
         </ul>
       </nav>
-
       <div class="header__call">
         <p class="header__call-text">
-          CALL US:
+          Call us:
         </p>
         <a class="header__call-link" href="tel:+19226279252">
           +1 (922) 627-92-52
         </a>
       </div>
     </div>
+    <div class="header__lower">
+      <h1 class="header__title">
+        Portfolio
+      </h1>
+    </div>
   </header>
-
   <section class="projects">
-
     <div class="projects__upper container">
       <nav class="projects__nav">
         <ul class="projects__menu">
@@ -88,14 +83,11 @@
         </ul>
       </nav>
     </div>
-
     <div class="projects__lower">
-
-      <div class="card projects__card projects__card--first">
-
+      <div class="card projects__card projects__card--1">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -108,16 +100,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--second">
-
+      <div class="card projects__card projects__card--2">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -130,16 +119,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--third">
-
+      <div class="card projects__card projects__card--3">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -152,16 +138,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--fourth">
-
+      <div class="card projects__card projects__card--4">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -174,16 +157,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--fifth">
-
+      <div class="card projects__card projects__card--5">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -196,16 +176,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--sixth">
-
+      <div class="card projects__card projects__card--6">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -218,16 +195,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--seventh">
-
+      <div class="card projects__card projects__card--7">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -240,16 +214,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--eighth">
-
+      <div class="card projects__card projects__card--8">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -262,16 +233,13 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
-      <div class="card projects__card projects__card--nineth">
-
+      <div class="card projects__card projects__card--9">
         <div class="card__info">
           <p class="card__category projects__card-category">
-            ARCHITECTURE
+            Architecture
           </p>
           <h2 class="card__title projects__card-title">
             House in <br>
@@ -284,81 +252,73 @@
             14 translation by H. Rackham.
           </p>
           <a href="#" class="card__link projects__card-link">
-
           </a>
         </div>
       </div>
-
     </div>
   </section>
-
   <footer class="footer">
-    <a href="#" class="footer__logo">
-      <img class="footer__logo-link" src="../../images/logo-black.png" alt="logo">
+    <a class="footer__logo" href="/">
+      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
-
     <p class="footer__rights">
       © Sentro 2021 <br>
       All Rights Resevered
     </p>
-
     <ul class="footer__menu footer__menu--secondary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Site Map
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Terms & Conditions
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Privacy Policy
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Help
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="#">
           Affiliated
         </a>
       </li>
     </ul>
-
     <ul class="footer__menu footer__menu--primary">
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="/">
           Home
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../about/about.html">
           About
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../portfolio/portfolio.html">
           Portfolio
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../news/news.html">
           News
         </a>
       </li>
       <li class="footer__menu-item">
-        <a href="#" class="footer__menu-link">
+        <a class="footer__menu-link" href="../contact/contact.html">
           Contact
         </a>
       </li>
     </ul>
-
-
     <ul class="footer__languages">
       <li class="footer__languages-item">
         ENG
@@ -370,18 +330,17 @@
         GER
       </li>
     </ul>
-
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--first" href="#" target="_black" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--second" href="#" target="_black" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--third" href="#" target="_black" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
         </a>
       </li>
     </ul>
